Added more projects statistics links.
Former-commit-id: 9fe3c81ff93bbfd7efac4769f8579fbe9bafda52

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,7 +9,7 @@ clone:
     - cd
     - git clone http://gitlab.namibsun.net/namboy94/homepage.git
 
-upload_to_pypi:
+upload_to_strato:
   stage: upload
   script:
     - cd
