Fix apache config files

--- a/config/apache-devel.conf
+++ b/config/apache-devel.conf
@@ -5,12 +5,12 @@
 
 <VirtualHost *:443>
 
-    WSGIDaemonProcess tippspiel-develop python-home=/var/www/develop.krumreyh.com/flask-app
+    WSGIDaemonProcess homepage-develop python-home=/var/www/develop.krumreyh.com/flask-app
     WSGIScriptAlias / /var/www/develop.krumreyh.com/app.wsgi
 
     <Directory /var/www/develop.krumreyh.com>
         WSGIScriptReloading On
-        WSGIProcessGroup tippspiel-develop
+        WSGIProcessGroup homepage-develop
         WSGIApplicationGroup %{GLOBAL}
         Order deny,allow
         Allow from all
