--- a/config/apache.conf
+++ b/config/apache.conf
@@ -5,12 +5,12 @@
 
 <VirtualHost *:443>
 
-    WSGIDaemonProcess tippspiel python-home=/var/www/krumreyh.com/flask-app
+    WSGIDaemonProcess homepage python-home=/var/www/krumreyh.com/flask-app
     WSGIScriptAlias / /var/www/krumreyh.com/app.wsgi
 
     <Directory /var/www/krumreyh.com>
         WSGIScriptReloading On
-        WSGIProcessGroup tippspiel
+        WSGIProcessGroup homepage
         WSGIApplicationGroup %{GLOBAL}
         Order deny,allow
         Allow from all
